second part of page  - topoffer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,61 @@
 
     </div>
   </header>
- 
+    
+  <section id="top-items">
+
+    <div class="top-items-section">
+      <div class="container">
+        <div class="top-items-main">
+
+
+          <div class="top-item">
+            <img src="images/topoffers.png">
+            <p class="item-text">Top offers</p>
+          </div>
+
+          <div class="top-item">
+            <img src="images/grocery.png">
+            <p class="item-text">Graocery</p>
+          </div>
+
+          <div class="top-item">
+            <img src="images/mobiles.png">
+            <p class="item-text">Mobiles</p>
+          </div>
+          <div class="top-item">
+            <img src="images/fashion.png">
+            <p class="item-text">Fashion</p>
+          </div>
+          <div class="top-item">
+            <img src="images/laptops.png">
+            <p class="item-text">laptops</p>
+          </div>
+          <div class="top-item">
+            <img src="images/home.jpg">
+            <p class="item-text">home</p>
+          </div>
+          <div class="top-item">
+            <img src="images/appliances.png">
+            <p class="item-text">Appliances</p>
+          </div>
+          <div class="top-item">
+            <img src="images/travel.png">
+            <p class="item-text">Travel</p>
+          </div>
+          <div class="top-item">
+            <img src="images/toys.png">
+            <p class="item-text">Toys & more<span class="fa fa-angle-down" aria-hidden="true"></span> </p>
+          </div>
+
+
+
+
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
 
