--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Online Shopping Site Mobiles, Electronics,..</title>
+    <link rel="icon" type="image/png" href="images/flipkart-icon.png">
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -198,7 +199,11 @@
       <div class="container"> 
         <div class="deals-of-the-day">
           <div class="title">
-            <p>Books And Music Instruments</p>
+            <div class="left">
+            <p>Books And Music Instruments</p> </div>
+            <div class="right">
+              <a href="viewall.html">VIEW ALL</a>
+            </div>
           </div>
           <div class="deals">
             <div class="deals-item">
