another commit - under testing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Online Shopping Site Mobiles, Electronics,..</title>
-    <link rel="icon" type="image/png" href="images/flipkart-icon.png">
+    <link rel="icon" type="image/png" href="images/flipkart-iconify.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -75,48 +75,69 @@
         <div class="container">
           <div class="top-items-main">
             <div class="top-item">
+              <div class="top-img">
               <img src="images/topoffers.png" />
-              <p class="item-text">Top offers</p>
+             </div>
+             <div class="top-text"> <p class="item-text">Top offers</p></div>
             </div>
 
             <div class="top-item">
+              <div class="top-img">
               <img src="images/grocery.png" />
-              <p class="item-text">Graocery</p>
+             </div>
+             <div class="top-text"><p class="item-text">Graocery</p></div>
             </div>
 
             <div class="top-item">
+              <div class="top-img">
               <img src="images/mobiles.png" />
-              <p class="item-text">Mobiles</p>
+             </div>
+             <div class="top-text"><p class="item-text">Mobiles</p></div>
             </div>
             <div class="top-item">
+              <div class="top-img">
               <img src="images/fashion.png" />
-              <p class="item-text">Fashion</p>
+             </div>
+             <div class="top-text"> <p class="item-text">Fashion</p></div>
             </div>
             <div class="top-item">
+              <div class="top-img">
               <img src="images/laptops.png" />
-              <p class="item-text">laptops</p>
+             </div>
+             <div class="top-text"><p class="item-text">laptops</p></div>
             </div>
             <div class="top-item">
+              <div class="top-img">
               <img src="images/home.jpg" />
-              <p class="item-text">home</p>
+              </div>
+              <div class="top-text"><p class="item-text">home</p></div>
             </div>
             <div class="top-item">
+              <div class="top-img">
               <img src="images/appliances.png" />
-              <p class="item-text">Appliances</p>
+             </div>
+             <div class="top-text"> <p class="item-text">Appliances</p></div>
             </div>
             <div class="top-item">
+              <div class="top-img">
               <img src="images/travel.png" />
-              <p class="item-text">Travel</p>
+             </div>
+             <div class="top-text"> <p class="item-text">Travel</p></div>
             </div>
             <div class="top-item">
+              <div class="top-img">
               <img src="images/toys.png" />
-              <p class="item-text">
+              </div></div>
+              <div class="top-text"><p class="item-text">
                 Toys & more<span
                   class="fa fa-angle-down"
                   aria-hidden="true"
                 ></span>
-              </p>
+              </p></div>
             </div>
+
+
+
           </div>
         </div>
       </div>
@@ -124,8 +145,7 @@
 
     <section id="deals-of-the-day-section">
       <div class="container">
-      <div class="deals-main">
-       
+        <div class="deals-main">
           <div class="deals-of-the-day">
             <div class="title">
               <div class="left">
@@ -141,45 +161,70 @@
             </div>
             <div class="deals">
               <div class="deals-item">
-                <img src="images/watches.jpeg" />
-                <p class="deals-title">Casio,Fastrack,Sonata</p>
-                <p class="deals-offer">Upto 80%+Extra 10%Off</p>
-                <p class="deals-line">Knockout Deals</p>
+                <div class="deals-item-img">
+                  <img src="images/watches.jpeg" />
+                </div>
+                <div class="deals-text">
+                  <h4>Casio,Fastrack,Sonata</h4>
+                  <p>Upto 80%+Extra 10%Off</p>
+                  <span>Knockout Deals</span>
+                </div>
               </div>
 
               <div class="deals-item">
-                <img src="images/perfumes.jpg" />
-                <p class="deals-title">Perfumes and Deos</p>
-                <p class="deals-offer">Upto 50%</p>
-                <p class="deals-line">Wild Stone, Nivea,Guess..</p>
+                <div class="deals-item-img">
+                  <img src="images/perfumes.jpg" />
+                </div>
+                <div class="deals-text">
+                  <h4>Perfumes and Deos</h4>
+                  <p>Upto 50%</p>
+                  <span>Wild Stone, Nivea,Guess..</span>
+                </div>
               </div>
 
               <div class="deals-item">
-                <img src="images/trimmers.jpeg" />
-                <p class="deals-title">Trimmers, Dryers..</p>
-                <p class="deals-offer">Upto 50%</p>
-                <p class="deals-line">Havells & Marie Clarie</p>
+                <div class="deals-item-img">
+                  <img src="images/trimmers.jpeg" />
+                </div>
+                <div class="deals-text">
+                  <h4>Trimmers, Dryers..</h4>
+                  <p>Upto 50%</p>
+                  <span>Havells & Marie Clarie</span>
+                </div>
               </div>
 
               <div class="deals-item">
-                <img src="images/bags.png" />
-                <p class="deals-title">Bags and Luggage</p>
-                <p class="deals-offer">Upto 70%+Extra 5%Off</p>
-                <p class="deals-line">Grab The Deal</p>
+                <div class="deals-item-img">
+                  <img src="images/bags.png" />
+                </div>
+                <div class="deals-text">
+                  <h4>Bags and Luggage</h4>
+                  <p>Upto 70%+Extra 5%Off</p>
+                  <span>Grab The Deal</span>
+                </div>
               </div>
 
               <div class="deals-item">
-                <img src="images/shoes.jpeg" />
-                <p class="deals-title">Adidas, Reebok,..</p>
-                <p class="deals-offer">Min 40%</p>
-                <p class="deals-line">Sports Shoes & more</p>
+                <div class="deals-item-img">
+                  <img src="images/shoes.jpeg" />
+                </div>
+
+                <div class="deals-text">
+                  <h4>Adidas, Reebok,..</h4>
+                  <p>Min 40%</p>
+                  <span>Sports Shoes & more</span>
+                </div>
               </div>
 
               <div class="deals-item">
-                <img src="images/covers.jpg" />
-                <p class="deals-title">Desiner Back Covers..</p>
-                <p class="deals-offer">Just $179</p>
-                <p class="deals-line">For All Top Models</p>
+                <div class="deals-item-img">
+                  <img src="images/covers.jpg" />
+                </div>
+                <div class="deals-text">
+                  <h4>Desiner Back Covers..</h4>
+                  <p>Just $179</p>
+                  <span>For All Top Models</span>
+                </div>
               </div>
             </div>
           </div>
@@ -187,65 +232,87 @@
           <div class="advertis">
             <img src="images/adver.jpg" />
           </div>
-
         </div>
         <!--container end-->
-
-     
       </div>
     </section>
 
     <section id="deals-of-the-day-section">
-      <div class="container"> 
+      <div class="container">
         <div class="deals-of-the-day">
           <div class="title">
             <div class="left">
-            <p>Books And Music Instruments</p> </div>
+              <p>Books And Music Instruments</p>
+            </div>
             <div class="right">
               <a href="viewall.html">VIEW ALL</a>
             </div>
           </div>
           <div class="deals">
             <div class="deals-item">
-              <img src="images/book1.jpeg" />
-              <p class="deals-title">Exclusive collection of B..</p>
-              <p class="deals-offer">for JEE 2021</p>
-              <p class="deals-line">Shop Now!</p>
+              <div class="deals-item-img">
+              <img src="images/book1.jpeg" /> </div>
+
+              <div class="deals-text">  
+              <h4>Exclusive collection of B..</h4>
+              <p>for JEE 2021</p>
+              <span>Shop Now!</span>
+              </div>
             </div>
 
             <div class="deals-item">
+              <div class="deals-item-img">
               <img src="images/tablas.jpeg" />
-              <p class="deals-title">Tablas</p>
-              <p class="deals-offer">Upto 60% Off</p>
-              <p class="deals-line">Explore Now!</p>
+              </div>
+              <div class="deals-text">
+              <h4>Tablas</h4>
+              <p>Upto 60% Off</p>
+              <span>Explore Now!</span>
+            </div>
             </div>
 
             <div class="deals-item">
+              <div class="deals-item-img">
               <img src="images/ghunghroo.jpeg" />
-              <p class="deals-title">Ghungroos</p>
-              <p class="deals-offer">Starting $249</p>
-              <p class="deals-line">Explore Now!</p>
+              </div>
+              <div class="deals-text">
+              <h4>Ghungroos</h4>
+              <p>Starting $249</p>
+              <span>Explore Now!</span>
+            </div>
             </div>
 
             <div class="deals-item">
+              <div class="deals-item-img">
               <img src="images/book2.jpeg" />
-              <p class="deals-title">Business & Economics B..</p>
-              <p class="deals-offer">Upto 70% Off</p>
-              <p class="deals-line">Peter Lynch, Sudhir Dixit..</p>
+                </div>
+              <div class="deals-text">
+              <h4>Business & Economics B..</h4>
+              <p>Upto 70% Off</p>
+              <span>Peter Lynch, Sudhir Dixit..</span>
+            </div>
             </div>
 
             <div class="deals-item">
+              <div class="deals-item-img">
               <img src="images/shoes.jpeg" />
-              <p class="deals-title">Adidas, Reebok,..</p>
-              <p class="deals-offer">Min 40%</p>
-              <p class="deals-line">Sports Shoes & more</p>
+              </div>
+              <div class="deals-text">
+              <h4>Adidas, Reebok,..</h4>
+              <p>Min 40%</p>
+              <span>Sports Shoes & more</span>
+            </div>
             </div>
 
             <div class="deals-item">
+              <div class="deals-item-img">
               <img src="images/wind-music.jpeg" />
-              <p class="deals-title">Popular Wind Instruments</p>
-              <p class="deals-offer">Under $299</p>
-              <p class="deals-line">Mouth Organ, Flute & More</p>
+              </div>
+              <div class="deals-text">
+              <h4>Popular Wind Instruments</h4>
+              <p>Under $299</p>
+              <span>Mouth Organ, Flute & More</span>
+            </div>
             </div>
           </div>
         </div>
