all parts of webpage without responsive -  first commit

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
               </div>
 
               <div class="cart">
-                <a href="cart.html"
-                  >Cart <i class="fa fa-shopping-cart" aria-hidden="true"></i
-                ></a>
+                <a href="cart.html">
+                  
+                   <i class="fa fa-shopping-cart" aria-hidden="true">
+                  Cart
+                  </i>
+                  </a>
               </div>
             </div>
           </div>
@@ -75,69 +78,48 @@
         <div class="container">
           <div class="top-items-main">
             <div class="top-item">
-              <div class="top-img">
               <img src="images/topoffers.png" />
-             </div>
-             <div class="top-text"> <p class="item-text">Top offers</p></div>
+              <p class="item-text">Top offers</p>
             </div>
 
             <div class="top-item">
-              <div class="top-img">
               <img src="images/grocery.png" />
-             </div>
-             <div class="top-text"><p class="item-text">Graocery</p></div>
+              <p class="item-text">Graocery</p>
             </div>
 
             <div class="top-item">
-              <div class="top-img">
               <img src="images/mobiles.png" />
-             </div>
-             <div class="top-text"><p class="item-text">Mobiles</p></div>
+              <p class="item-text">Mobiles</p>
             </div>
             <div class="top-item">
-              <div class="top-img">
               <img src="images/fashion.png" />
-             </div>
-             <div class="top-text"> <p class="item-text">Fashion</p></div>
+              <p class="item-text">Fashion</p>
             </div>
             <div class="top-item">
-              <div class="top-img">
               <img src="images/laptops.png" />
-             </div>
-             <div class="top-text"><p class="item-text">laptops</p></div>
+              <p class="item-text">laptops</p>
             </div>
             <div class="top-item">
-              <div class="top-img">
               <img src="images/home.jpg" />
-              </div>
-              <div class="top-text"><p class="item-text">home</p></div>
+              <p class="item-text">home</p>
             </div>
             <div class="top-item">
-              <div class="top-img">
               <img src="images/appliances.png" />
-             </div>
-             <div class="top-text"> <p class="item-text">Appliances</p></div>
+              <p class="item-text">Appliances</p>
             </div>
             <div class="top-item">
-              <div class="top-img">
               <img src="images/travel.png" />
-             </div>
-             <div class="top-text"> <p class="item-text">Travel</p></div>
+              <p class="item-text">Travel</p>
             </div>
             <div class="top-item">
-              <div class="top-img">
               <img src="images/toys.png" />
-              </div></div>
-              <div class="top-text"><p class="item-text">
+              <p class="item-text">
                 Toys & more<span
                   class="fa fa-angle-down"
                   aria-hidden="true"
                 ></span>
-              </p></div>
+              </p>
             </div>
-
-
-
           </div>
         </div>
       </div>
@@ -239,10 +221,13 @@
 
     <section id="deals-of-the-day-section">
       <div class="container">
-        <div class="deals-of-the-day">
+        <div class="deals-of-the-day" id="books-instru">
           <div class="title">
             <div class="left">
               <p>Books And Music Instruments</p>
+              <h3>
+                Shop Now!
+              </h3>
             </div>
             <div class="right">
               <a href="viewall.html">VIEW ALL</a>
