--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Online Shopping Site Mobiles, Electronics,..</title>
     <link rel="icon" type="image/png" href="images/flipkart-iconify.png" />
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
@@ -247,7 +249,7 @@
 
             <div class="deals-item">
               <div class="deals-item-img">
-              <img src="images/tablas.jpeg" />
+              <img src="images/tablas.png" />
               </div>
               <div class="deals-text">
               <h4>Tablas</h4>
