final commit before submitting

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
                     <span class="fa fa-search form-control-feedback"></span>
-                    <input type="text" class="form-control" placeholder="Search for products, brand and more"
+                    <input type="text" class="form-control" placeholder="Search for products"
                     />
                   
 
@@ -63,10 +63,12 @@
                       More 
                       <i class="fa fa-caret-down" id="fashion" aria-hidden="true"></i></a>
                     <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                    </div>
+                    <a href="#">Notification Preferences</a>
+                    <a href="#">Sell On Flipkart</a>
+                    <a href="#">24*7 Customer Care</a>
+                    <a href="#">Advertise</a>
+                    <a href="#">Download App</a>  
+                  </div>
                  
 
 
